--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,19 @@
 version: "2"
 services:
-  lager-server:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      command: npm start
-      # depends_on:
-      # - mongodb
-      volumes:
-        - .:/src
-        - /node_modules
-      ports:
-        - 80:3000
-    # links:
+  express:
+    build: .
+    command: npm start
+    # depends_on:
     # - mongodb
-    # mongodb:
-    # image: mongo:latest
-    # command: --smallfiles
-    # ports:
-    # - 27017:27017
+    volumes:
+      - .:/src
+      - /node_modules
+    ports:
+      - "3000:3000"
+      # links:
+      # - mongodb
+      # mongodb:
+      # image: mongo:latest
+      # command: --smallfiles
+      # ports:
+      # - 27017:27017
