--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Pablo Ortiz",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "crypo": "^0.1.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
     "express-promise-router": "^2.0.0",
-    "mongojs": "^2.4.1"
+    "jsonwebtoken": "^8.2.1",
+    "mongojs": "^2.4.1",
+    "mongoose": "^5.1.1",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.13.2"
