--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,15 +21,18 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@toverux/ngx-sweetalert2": "^3.4.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "ngx-toastr": "^8.7.3",
+    "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
+    "save": "^2.3.2",
     "sweetalert2": "^7.20.6",
     "zone.js": "^0.8.14"
   },
