--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
     "express-promise-router": "^2.0.0",
+    "firebase-admin": "^6.2.0",
     "jsonwebtoken": "^8.2.1",
     "mongojs": "^2.4.1",
     "mongoose": "^5.1.1",
